# sonicpi-mcp

./: .env_example  .gitignore  README.md  mcp.json  pyproject.toml
sonicpi_mcp/: ai_generator.py  config.py  diagnostics.py  logging.py  osc_client.py  patterns.py  schemas.py  server.py
